--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,8 @@
 
 # MySQL
 quarkus.datasource.db-kind=mysql
-quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/pedra_hard_scan
+quarkus.datasource.jdbc.url=jdbc:mysql://192.168.231.1:3306/pedra_hard_scan
+# quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/pedra_hard_scan
 quarkus.datasource.jdbc.driver=com.mysql.cj.jdbc.Driver
 quarkus.datasource.username=rei
 quarkus.datasource.password=123456
